--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.2.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -8,11 +9,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
-  
-
-    "scripts": {
-      "start":"node index.js"
-    }
+  "scripts": {
+    "start": "node index.js"
   }
-  
-
+}
