--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   },
   "scripts": {
     "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
